# Okoyo

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
res/: default.frag  default.vert  framebuffer.frag  framebuffer.vert
src/: App.cpp
